--- a/LoadingBananaPeel/Examples/src/main/res/menu/main.xml
+++ b/LoadingBananaPeel/Examples/src/main/res/menu/main.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.rzloadingbananapeel.examples.MainActivity" >
+    tools:context="com.smb.examples.MainActivity" >
     
     <item android:id="@+id/action_about"
         android:title="@string/action_about"
