--- a/LoadingBananaPeel/Examples/src/main/res/layout-v21/fragment_main.xml
+++ b/LoadingBananaPeel/Examples/src/main/res/layout-v21/fragment_main.xml
@@ -3,4 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_content_loading_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    app:bananaPeelDefaultImageResource="@drawable/ic_bananapeel_default"
+    app:bananaPeelDefaultMessageStringResource="@string/banana_peel_default_empty_message"
+    app:bananaPeelContentViewLayoutResource="@layout/view_example_content" />
